_sass/_qr-footer.scss
.qr-footer {
  background: #25215e;
  color: #ffffff;
  display: flex;
  text-align: center;
  min-height: 56px;
  width: 100%;
  padding-top: 20px;
}

.qr-footer a {
  color: #ffffff;
  text-decoration: none;
}

.center-column {
  flex: 3;
  text-align: center;
}

.center-column p {
  font-weight: bold;
}

.center-column-responsive {
  display: none;
}

.qr-list {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  width: 90%;
}

.qr-list img {
  max-width: 150px;
}

.qr-list a {
  text-decoration: underline;
  margin-top: 5%;
  width: 100%;
  text-align: center;
}

.qr-list p {
  margin-top: 0;
  margin-bottom: 0;
  color: white;
}

.qr-rounded-button {
  border-radius: 20px;
  border: 1px solid white;
  background-color: #25215e;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 20px;
}

.qr-rounded-button p:nth-child(1) {
  margin-top: 0;
  margin-bottom: 0;
  color: white;
  font-size: 12px;
  text-align: center;
}

.qr-rounded-button p:nth-child(2) {
  margin-top: 0;
  margin-bottom: 0;
  color: white;
  font-size: 18px;
  font-weight: bold;
  text-align: center;
}

.qr-about p:nth-child(1) {
  font-size: 12px;
}

.qr-about p:nth-child(2) {
  font-size: 12px;
  font-weight: bold;
}

.container-qr {
  background-color: #25215e;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  align-items: center;
  flex-direction: column;
  min-height: 100vh;
  text-align: justify;
}

// QR all

.qr-all-list {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  width: 90%;
  gap: 20px;
}

.qr-all-list img {
  max-width: 150px;
}

.qr-all-list a {
  text-decoration: underline;
  margin-top: 10%;
  width: 100%;
  text-align: center;
}

.qr-all-list p {
  margin-top: 0;
  margin-bottom: 0;
  color: white;
}

.lang-nav {
  width: 105%;
  text-align: right;
}

.lang-nav a {
  text-decoration: underline;
  margin-top: 0%;
  color: white;
}

.qr-all-description {
  text-align: center;
  font-size: 14px;
  width: 80%;
}

.qr-all-rounded-button {
  width: 80%;
  border-radius: 20px;
  border: 1px solid white;
  background-color: #25215e;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 20px;
}

.qr-all-rounded-button p:nth-child(1) {
  margin-top: 0;
  margin-bottom: 0;
  color: white;
  font-size: 18px;
  font-weight: bold;
  text-align: center;
}

.qr-all-images {
  display: flex;
  align-items: center;
  flex-direction: row;
  width: 100%;
}

.qr-all-images a {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.qr-all-images p {
  font-size: 14px;
  margin-left: 5%;
}

@media (max-width: $container-width) {
  .qr-footer {
    flex-direction: column;
  }

  .center-column {
    display: none;
  }

  .center-column-responsive {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: auto;
    width: auto;
    color: #ffffff;
  }

  .center-column-responsive a {
    text-decoration: underline;
    display: flex;
    justify-content: center;
  }
}

